# mrdc2020

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  launch.sh  source_ros.sh
controllerPC/: Cargo.toml
controllerPC/src/: controller.rs  main.rs  serial.rs
drivetrain/laptop/: CMakeLists.txt  main.cpp
drivetrain/laptop/control_computer/: Cargo.toml
drivetrain/laptop/control_computer/src/: main.rs  tui.rs
drivetrain/laptop/controllerPC/src/: controller.rs  main.rs  serial.rs
laptop/control_computer/: Cargo.toml  build.rs
laptop/control_computer/src/: controller.rs  main.rs  serial.rs  tui.rs
laptop/control_computer/src/protos/: state.proto
launch_scripts/: launch_controls.sh  launch_pca9685.sh  launch_ros_serial.sh  launch_roscore.sh  launch_xbee.sh  load_rosparam.sh
mrdc_arduino_sketch/: mrdc_arduino_sketch.ino
mrdc_arduino_sketch/mrdc_arduino_sketch_ino/: mrdc_arduino_sketch_ino.ino
ros/config/: default_config.yaml
ros/src/mrdc_controls_processing/: CMakeLists.txt  package.xml
ros/src/mrdc_controls_processing/msg/: Analog_Controller.msg
ros/src/mrdc_controls_processing/src/: controls_processing.cpp
ros/src/mrdc_xbee_communication/: CMakeLists.txt  package.xml
ros/src/mrdc_xbee_communication/proto/: state.proto  status.proto
ros/src/mrdc_xbee_communication/src/: xbee_communication.cpp  xbee_receive.cpp
ros/src/ros_serial/: CMakeLists.txt  config.yml  package.xml  serial_dump
ros/src/ros_serial/src/: ConfigParser.cpp  ConfigParser.h  MotorTopic.cpp  MotorTopic.h  SerialInterface.cpp  SerialInterface.h  Topic.h  main.cpp  protcol_constants.h
ros_config/: default_config.yaml
